--- a/Interface&Navigation/style.css
+++ b/Interface&Navigation/style.css
@@ -1,6 +1,6 @@
 /*
-Within this stylesheet we edit elements with CSS.
-    Changing fonts, colors etc */
+Within this stylesheet we edit elements with CSS. Changing fonts, colors etc
+*/
 
 h3 {font-family: Cambria, Georgia, Times, 'Times New Roman', serif;
 position: fixed;
