--- a/Interface&Navigation/style.css
+++ b/Interface&Navigation/style.css
@@ -23,6 +23,12 @@ nav {
   background-color: transparent;
 }
 
+#search-cover {
+  background-color: #fff;
+  border-bottom: none;
+  border-radius: 5px;
+}
+
 .backgroundImage{
   background: url("https://i.imgur.com/T2Q9KaM.jpg");
   -webkit-filter: blur(5px);
