--- a/Interface&Navigation/style.css
+++ b/Interface&Navigation/style.css
@@ -3,6 +3,8 @@ Within this stylesheet we edit elements with CSS. Changing fonts, colors etc
 */
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Helvetica Neue", Helvetica, Cambria, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -27,18 +29,6 @@ nav {
 }
 
 #search-bar-cover {
-  background-color: #fff;
-  border-bottom: none;
-  border-radius: 5px;
-}
-
-#email-prompt {
-  background-color: #fff;
-  border-bottom: none;
-  border-radius: 5px;
-}
-
-#password-prompt {
   background-color: #fff;
   border-bottom: none;
   border-radius: 5px;
@@ -74,4 +64,67 @@ nav {
 
 .cover {
   padding-top: 150px;
+}
+
+.login-box {
+  width: 320px;
+  height: 420px;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: -50px;
+  left: calc(50% - 50px);
+}
+
+.login-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+    color: #fff;
+} 
+
+.login-box p {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.login-box input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.login-box input[type="text"], input[type="password"] {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  font-size: 16px;
+  padding: 0 0 0px;
+}
+
+.login-box input[type="text"]:focus {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  font-size: 16px;
+  padding: 0 0 0px;
 }
